--- a/universitas/templates/universitas.html
+++ b/universitas/templates/universitas.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UNIVERSITAS SULTAN AGENG TIRTAYASA</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+   
     <h1>UNTIRTA</h1>
     <nav>
       <div class="logo">
