--- a/fkip/templates/fkip/index.html
+++ b/fkip/templates/fkip/index.html
@@ -12,6 +12,10 @@
     
     <h2>Terdiri dari :</h2>
 
+    {% for judulfkip in titlefkip %}
+        <li>{{ judulfkip }}</li>
+    {% endfor %}
+
     <h3>Daftar Nama Dosen Fkip</h3>
     <table class="table table-success table-striped">
         <tr>
@@ -37,6 +41,15 @@
         </tr>
         {% endfor %}
     </table>
+    <h4>Form untuk Menambahkan Data Dosen Fkip</h4>
+    <form action="" method="post">
+
+        {{ form.as_p }}
+
+        <button>Tambah Data Dosen</button>
+
+    </form>
+
 
     <h3>Daftar Nama Tendik Fkip</h3>
     <table class="table table-success table-striped">
@@ -61,6 +74,14 @@
         </tr>
         {% endfor %}
     </table>
+    <h4>Form untuk Menambahkan Data Tendik Fkip</h4>
+    <form action="" method="post">
+
+        {{ form.as_p }}
+
+        <button>Tambah Data Tendik</button>
+
+    </form>
     
     <h3>Daftar Nama Mahasiswa Fkip</h3>
     <table class="table table-success table-striped">
@@ -86,9 +107,13 @@
         </tr>
         {% endfor %}
     </table>
-    
-    {% for judulfkip in titlefkip %}
-        <li>{{ judulfkip }}</li>
-    {% endfor %}
+    <h4>Form untuk Menambahkan Data Mahasiswa Fkip</h4>
+    <form action="" method="post">
+
+        {{ form.as_p }}
+
+        <button>Tambah Data Mahasiswa</button>
+
+    </form>
 
     {% endblock %}
